--- a/config/settings.conf
+++ b/config/settings.conf
@@ -1,7 +1,8 @@
 ### CONFIGURABLE SETTINGS ###
 #
 # Installation Mode
-UNATTENDED=true            # Set to true for automated installation without prompts
+UNATTENDED=true             # Set to true for automated installation without prompts
+RECONFIG=true               # Run through the settings to configure the script to your liking
 SERVER_MODE=false           # Set to true for minimal server installation (only systemd-networkd)
 #
 # System Configuration
@@ -13,6 +14,10 @@ KERNEL="linux"              # Kernel choice (linux, linux-lts, linux-zen)
 #
 # Storage Configuration
 DISK="/dev/sda"             # Target disk for installation
+EFI=1                       # Partition number of the EFI partition
+ROOT=2                      # Partition number of the ROOT partition
+SWAP=3                      # Partition number of the optional SWAP partition
+PARTITION=true              # Partition the disk
 ROOT_SIZE="100%"            # Root partition size
 USE_SWAP=true               # Enable swap partition
 SWAP_SIZE="8G"              # Swap partition size (recommended: RAM size or 8GB)
