Add laptop mode to conf

--- a/config/settings.conf
+++ b/config/settings.conf
@@ -4,6 +4,7 @@
 UNATTENDED=true             # Set to true for automated installation without prompts
 RECONFIG=true               # Run through the settings to configure the script to your liking
 SERVER_MODE=false           # Set to true for minimal server installation (only systemd-networkd)
+LAPTOP_MODE=false           # Set to true for laptop mode (includes network and power management)
 #
 # System Configuration
 HOSTNAME="archmachine"      # System hostname
