setup_system part 1

--- a/config/settings.conf
+++ b/config/settings.conf
@@ -10,7 +10,7 @@ LAPTOP_MODE=false           # Set to true for laptop mode (includes network and 
 HOSTNAME="archmachine"      # System hostname
 USERNAME="admin"            # Default user to create
 PASSWORD="password"         # Leave empty for secure manual password input
-CPU_VENDOR="amd"            # CPU vendor (intel/amd) for microcode installation
+CPU_VENDOR="auto"            # CPU vendor (intel/amd/auto) for microcode installation
 KERNEL="linux"              # Kernel choice (linux, linux-lts, linux-zen)
 #
 # Storage Configuration
