--- a/config/settings.conf
+++ b/config/settings.conf
@@ -19,8 +19,8 @@ EFI=1                       # Partition number of the EFI partition
 ROOT=2                      # Partition number of the ROOT partition
 SWAP=3                      # Partition number of the optional SWAP partition
 PARTITION=true              # Partition the disk
-ROOT_SIZE="100%"            # Root partition size
-USE_SWAP=true               # Enable swap partition
+ROOT_SIZE="100%"            # Root partition size # TODO more info
+USE_SWAP=false              # Enable swap partition
 SWAP_SIZE="8G"              # Swap partition size (recommended: RAM size or 8GB)
 #
 # Regional Settings
