zsh but still no fzf

--- a/config/settings.conf
+++ b/config/settings.conf
@@ -2,7 +2,7 @@
 #
 # Installation Mode
 UNATTENDED=true             # Set to true for automated installation without prompts
-RECONFIG=false               # Run through the settings to configure the script to your liking
+RECONFIG=false              # Run through the settings to configure the script to your liking
 SERVER_MODE=false           # Set to true for minimal server installation (only systemd-networkd)
 LAPTOP_MODE=false           # Set to true for laptop mode (includes network and power management)
 #
@@ -29,4 +29,4 @@ LOCALE="en_US.UTF-8"        # System locale
 KEYMAP="colemak"            # Keyboard layout
 #
 # Additional Packages
-PACKAGES=""
+PACKAGES="git zsh eza" # TODO implement in postinstall | configure.sh
